--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,10 @@ dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.30.0",
     "httpx>=0.27.0",
+    "google-api-python-client>=2.0.0",
+    "google-auth>=2.0.0",
+    "google-auth-oauthlib>=1.0.0",
+    "google-auth-httplib2>=0.2.0",
+    "redis>=5.0.0",
+    "chromadb>=0.5.0",
 ]
