--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,35 +1,15 @@
-# Multi-stage build for production optimization
-FROM python:3.13-slim as builder
-
-WORKDIR /app
-
-# Install system dependencies and uv
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install uv
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
-RUN chmod +x /usr/local/bin/uv
-
-# Copy dependency files
-COPY pyproject.toml uv.lock ./
-
-# Install dependencies in virtual environment
-RUN uv venv /opt/venv
-ENV VIRTUAL_ENV=/opt/venv PATH="/opt/venv/bin:$PATH"
-RUN uv sync --frozen --no-dev
-
-# Production stage
 FROM python:3.13-slim
 
 WORKDIR /app
 
-# Create non-root user for security
-RUN groupadd -r appuser && useradd -r -g appuser appuser
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
 
-# Copy virtual environment from builder
-COPY --from=builder /opt/venv /opt/venv
+# Copy dependency files
+COPY pyproject.toml uv.lock ./
+
+# Install dependencies
+RUN uv sync --frozen --no-dev
 
 # Copy application code
 COPY app.py ./
@@ -37,26 +17,14 @@ COPY core/ ./core/
 COPY tools/ ./tools/
 COPY config/ ./config/
 COPY scripts/ ./scripts/
-
-# Create necessary directories with proper permissions
-RUN mkdir -p /app/memory_db /app/sheets_index_db /app/logs && \
-    chown -R appuser:appuser /app
+COPY credentials.json ./
 
 # Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    ENVIRONMENT=production \
-    PATH="/opt/venv/bin:$PATH" \
-    PYTHONPATH="/app"
-
-# Switch to non-root user
-USER appuser
+ENV PYTHONUNBUFFERED=1
+ENV ENVIRONMENT=production
 
 # Expose port
 EXPOSE 8009
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8009/health')" || exit 1
-
-# Run the application using production script
-CMD ["python", "scripts/run_api.py"]
+# Run the application
+CMD ["uv", "run", "python", "scripts/run_api.py"]
