Add Google Sheets data fetching tools for LangChain agents
- Implemented tools to fetch course links, course details, FAQs, professor information, and company information from Google Sheets.
- Created input schemas for each tool using Pydantic for validation.
- Added error handling and logging for improved debugging and user feedback.
- Provided a backward compatibility function for fetching course links.

--- a/.env.example
+++ b/.env.example
@@ -1,134 +1,185 @@
-﻿# ============================================
-# ICT Agent API - Environment Variables
-# ============================================
-# Copy this file to .env and fill in your values
-# cp .env.example .env
+# ============================================================================
+# ICT Agent - Environment Variables Configuration
+# ============================================================================
+# Copy this file to .env and fill in your actual values
+# DO NOT commit .env to version control (it's in .gitignore)
 
-# ============================================
-# REQUIRED - API Keys
-# ============================================
+# ============================================================================
+# REQUIRED: API Keys
+# ============================================================================
 
-# OpenAI API Key (REQUIRED)
-# Get your key from: https://platform.openai.com/api-keys
+# OpenAI API Key (Required)
+# Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
-# ============================================
-# OPTIONAL - External Services
-# ============================================
+# API Key for endpoint authentication (Required)
+# Generate a secure random string: openssl rand -hex 32
+API_KEY=your_api_key_here
 
-# Pinecone API Key (Optional - for vector database search)
-# Get your key from: https://app.pinecone.io/
-PINECONE_API_KEY=your_pinecone_api_key_here
+# ============================================================================
+# Domain Configuration
+# ============================================================================
 
-# Pinecone Index Name (Optional - default: default-index)
-PINECONE_INDEX_NAME=default-index
+# Base URL for your API (used for webhooks and external references)
+# Example: https://zensbot.cloud or https://api.yourdomain.com
+API_BASE_URL=https://zensbot.cloud
 
-# MCP RAG Sheets URL (Optional - default: https://www.ictpk.cloud/mcp/rag-sheets)
-MCP_RAG_SHEETS_URL=https://www.ictpk.cloud/mcp/rag-sheets
+# Webhook endpoint URL (auto-constructed from API_BASE_URL if not set)
+# Leave empty to auto-generate from API_BASE_URL
+# SHEETS_WEBHOOK_URL=https://zensbot.cloud/webhooks/google-sheets-update
 
-# ============================================
-# AI Model Configuration
-# ============================================
+# ============================================================================
+# Google Sheets Configuration
+# ============================================================================
+# Choose ONE authentication method: OAuth2 (recommended) OR Service Account
 
-# Model name (default: gpt-4o)
-# Options: gpt-4o, gpt-4, gpt-3.5-turbo
-MODEL_NAME=gpt-4o
+# --- Option 1: OAuth2 (Recommended for Production) ---
+# Get these from Google Cloud Console > APIs & Services > Credentials
+GOOGLE_SHEETS_CLIENT_ID=your_client_id.apps.googleusercontent.com
+GOOGLE_SHEETS_CLIENT_SECRET=your_client_secret_here
+GOOGLE_SHEETS_REFRESH_TOKEN=your_refresh_token_here
 
-# Temperature for LLM (default: 0.7)
-# Range: 0.0 (deterministic) to 2.0 (creative)
+# --- Option 2: Service Account (Alternative) ---
+# Path to service account JSON file (if using service account instead of OAuth2)
+# Leave empty if using OAuth2
+# GOOGLE_SHEETS_CREDENTIALS_PATH=/app/credentials/google-sheets-service-account.json
+
+# --- Required for Both Methods ---
+# Google Sheets Spreadsheet ID (from the spreadsheet URL)
+GOOGLE_SHEETS_SPREADSHEET_ID=1lJQfvDqarAxQXWZlyfMLjEbwpkEjBBkcWvSY3226_I0
+
+# Comma-separated list of sheet names to cache
+GOOGLE_SHEETS_SHEET_NAMES=Course_Details,Course_Links,FAQs,About_Profr,Company_Info
+
+# ============================================================================
+# Google Sheets Webhook Configuration
+# ============================================================================
+
+# Enable webhook for real-time updates (default: true)
+SHEETS_WEBHOOK_ENABLED=true
+
+# Webhook secret for authentication (generate: openssl rand -hex 32)
+SHEETS_WEBHOOK_SECRET=generate_secure_random_string_here
+
+# Enable fallback polling as safety net (default: true)
+SHEETS_FALLBACK_POLL_ENABLED=true
+
+# Fallback poll interval in seconds (default: 86400 = 24 hours)
+SHEETS_FALLBACK_POLL_INTERVAL=86400
+
+# ============================================================================
+# Redis Configuration (Optional)
+# ============================================================================
+# Redis is optional - app will use in-memory cache if Redis is not available
+# To use Redis, start with: docker compose --profile with-redis up
+
+# Redis host (default: localhost)
+# Use 'redis' if Redis is running in Docker Compose
+REDIS_HOST=localhost
+
+# Redis port (default: 6379)
+REDIS_PORT=6379
+
+# Redis password (leave empty if no password)
+REDIS_PASSWORD=
+
+# Redis database number (default: 0)
+REDIS_DB=0
+
+# ============================================================================
+# ChromaDB Configuration
+# ============================================================================
+
+# Path for ChromaDB vector store (for semantic search)
+# In Docker: use /app/sheets_index_db
+# Local: use ./sheets_index_db
+CHROMA_DB_PATH=/app/sheets_index_db
+
+# ============================================================================
+# LLM Model Configuration
+# ============================================================================
+
+# OpenAI model name (default: gpt-4.1-mini)
+# Options: gpt-4.1-mini, gpt-4o, gpt-4-turbo, gpt-3.5-turbo, etc.
+MODEL_NAME=gpt-4.1-mini
+
+# Model temperature (0.0-2.0, default: 0.7)
+# Lower = more deterministic, Higher = more creative
 TEMPERATURE=0.7
 
-# ============================================
+# ============================================================================
 # Memory & Storage Configuration
-# ============================================
+# ============================================================================
 
-# Path to store ChromaDB database (default: ./memory_db)
-MEMORY_DB_PATH=./memory_db
+# Path to memory database
+# In Docker: use /app/memory_db
+# Local: use ./memory_db
+MEMORY_DB_PATH=/app/memory_db
 
-# Number of turns before summarizing conversation (default: 10)
+# Number of conversation turns before summarizing (default: 10)
 SUMMARIZE_INTERVAL=10
 
-# ============================================
+# ============================================================================
 # API Server Configuration
-# ============================================
+# ============================================================================
 
-# API server host (default: 0.0.0.0)
-# Use 0.0.0.0 to accept connections from all interfaces
+# API host (default: 0.0.0.0 for Docker)
 API_HOST=0.0.0.0
 
-# API server port (default: 8009)
+# API port (default: 8009)
 API_PORT=8009
 
-# Environment mode (default: development)
-# Options: development, production
-ENVIRONMENT=development
+# Environment (production, development, staging)
+ENVIRONMENT=production
 
-# Enable auto-reload for development (default: false)
-# Set to true for development, false for production
-API_RELOAD=false
+# ============================================================================
+# Performance Settings
+# ============================================================================
 
-# ============================================
-# Production Performance Settings
-# ============================================
-
-# Number of worker processes (default: 1, production: 4)
-# Increase for better performance (recommended: 4 for production)
+# Number of worker processes (default: 1 for local, 4 for production)
 WORKERS=4
 
 # Maximum concurrent connections (default: 100)
 MAX_CONCURRENT=100
 
 # Keep-alive timeout in seconds (default: 120)
-# Increase for long-running requests
 KEEP_ALIVE=120
 
 # Request timeout in seconds (default: 120)
-# Increase for long-running AI processing
 TIMEOUT=120
 
-# ============================================
+# ============================================================================
 # Logging Configuration
-# ============================================
+# ============================================================================
 
-# Log level (default: info)
-# Options: debug, info, warning, error, critical
+# Log level (debug, info, warning, error, critical)
+# Default: info
 LOG_LEVEL=info
 
-# ============================================
+# ============================================================================
 # CORS & Security Configuration
-# ============================================
+# ============================================================================
 
-# CORS allowed origins (default: *)
-# For production, specify exact origins: https://your-domain.com,https://www.your-domain.com
-# Use * for development only
+# CORS allowed origins (comma-separated, * for all)
+# Example: https://example.com,https://app.example.com
 CORS_ORIGINS=*
 
-# Trusted hosts for proxy security (default: *)
-# For production, specify exact hosts: api.your-domain.com,www.your-domain.com
-# Use * to accept all hosts (development only)
+# Trusted hosts (comma-separated, * for all)
+# Example: example.com,*.example.com
 TRUSTED_HOSTS=*
 
-# ============================================
+# ============================================================================
 # Nginx Proxy Configuration
-# ============================================
+# ============================================================================
 
-# Root path for subpath proxying (default: empty)
-# If nginx proxies to /api/, set this to /api
-# Leave empty if proxying to root (/)
+# Root path if running behind a proxy with subpath
+# Example: /api (if your API is at https://example.com/api)
+# Leave empty if running at root
 ROOT_PATH=
 
-# ============================================
-# Example Production Configuration
-# ============================================
-# Uncomment and customize for production:
+# ============================================================================
+# MCP RAG Configuration
+# ============================================================================
 
-# ENVIRONMENT=production
-# API_RELOAD=false
-# WORKERS=4
-# MAX_CONCURRENT=100
-# KEEP_ALIVE=120
-# TIMEOUT=120
-# LOG_LEVEL=info
-# CORS_ORIGINS=https://your-domain.com,https://www.your-domain.com
-# TRUSTED_HOSTS=api.your-domain.com,www.your-domain.com
-# ROOT_PATH=/api
+# MCP RAG Sheets endpoint URL
+MCP_RAG_SHEETS_URL=https://www.ictpk.cloud/mcp/rag-sheets
