Add project knowledge base and update admin config
Added PROJECT_KNOWLEDGE_BASE.md with comprehensive documentation for the ICT Agent system. Updated .env.example to include template editor admin credentials and session timeout. Updated .claude/settings.local.json with additional Bash permissions and output style. Removed obsolete documentation files (STAGES_IMPLEMENTATION.md, STAGE_CHANGES.md, WINDOWS_FIXES.md). Added static/admin.html and core/template_manager.py. Updated app.py, docker-compose files, config/prompt.txt, and tools/template_tools.py to reflect new features and documentation.

--- a/.env.example
+++ b/.env.example
@@ -183,3 +183,15 @@ ROOT_PATH=
 
 # MCP RAG Sheets endpoint URL
 MCP_RAG_SHEETS_URL=https://www.ictpk.cloud/mcp/rag-sheets
+
+# ============================================================================
+# Template Editor Admin Configuration
+# ============================================================================
+
+# Admin credentials for template editor web interface
+# Access at: http://localhost:8009/admin
+ADMIN_USERNAME=ictxzensbot
+ADMIN_PASSWORD=ictxzensbot
+
+# Admin session timeout in seconds (default: 3600 = 1 hour)
+ADMIN_SESSION_TIMEOUT=3600
