Improve admin session handling and logging
Enhanced logging for admin session validation and login, providing more detailed debug and warning messages. Updated session cookie settings for better compatibility with nginx SSL termination by removing the 'secure' flag and letting the browser determine the domain. Updated .env.example to clarify that admin sessions never expire.

--- a/.env.example
+++ b/.env.example
@@ -193,5 +193,4 @@ MCP_RAG_SHEETS_URL=https://www.ictpk.cloud/mcp/rag-sheets
 ADMIN_USERNAME=ictxzensbot
 ADMIN_PASSWORD=ictxzensbot
 
-# Admin session timeout in seconds (default: 3600 = 1 hour)
-ADMIN_SESSION_TIMEOUT=3600
+# Note: Sessions never expire (persist until logout or server restart)
