--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,6 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "redis>=5.0.0",
     "chromadb>=0.5.0",
+    "supabase>=2.0.0",
+    "langchain-redis>=0.1.0",
 ]
