--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-chroma>=0.1.0",
     "langchain-text-splitters>=0.3.0",
     "chromadb>=0.5.0",
+    "langgraph-checkpoint-sqlite>=0.1.0",
     "python-dotenv>=1.0.0",
     "tiktoken>=0.7.0",
     "pydantic>=2.0.0",
@@ -23,6 +24,7 @@ dependencies = [
     "google-auth>=2.0.0",
     "google-auth-oauthlib>=1.0.0",
     "google-auth-httplib2>=0.2.0",
+    "gspread>=6.0.0",
     "redis>=5.0.0",
     "chromadb>=0.5.0",
     "supabase>=2.0.0",
